# sparse-set

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  main.cpp
cmake/: compiler-flags.cmake
demo/: CMakeLists.txt  main.cpp
src/: common.hpp  sparse-key-set.hpp  sparse-set.hpp
test/: CMakeLists.txt  main.cpp
